# MeshShadersMarchingCubes

./: .gitignore  CMakeLists.txt  MarchingCubes.sln  README.md
MarchingSquares/: CMakeLists.txt  Constants.h  FileObserver.cpp  FileObserver.h  MarchingSquares.vcxproj  MarchingSquares.vcxproj.filters  MeshShaderHelloTriangleVK.cpp  VulkanRenderer.cpp  VulkanRenderer.h  compile_shaders.bat  out.csv  stdafx.h  wrappers.h
MarchingSquares/shaders/: blanket.mesh.glsl  flat.mesh.glsl  mesh.mesh_BADVERTEXSHARE.glsl  mesh.mesh_SQUAREGRID.glsl  plain.frag.glsl  plain.frag.spv  smooth.mesh.glsl  task.task.glsl
